--- a/apps/Computer/index.html
+++ b/apps/Computer/index.html
@@ -40,6 +40,7 @@
         </div>
       </form>
     </div>
+    <script src="../functions.js"></script>
     <script src="./js/main-script.js"></script>
   </body>
 </html>
