--- a/apps/AI/index.html
+++ b/apps/AI/index.html
@@ -55,6 +55,7 @@
         </div>
       </div>
     </form>
+    <script src="../functions.js"></script>
     <script src="./js/main-script.js"></script>
   </body>
 </html>
