--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-6 col-sm-12 mt-2">
           <a href="./apps/Computer/index.html"
             ><button class="btn btn-lg btn-primary form-control">
-              Компьютер загадивает
+              Компьютер загадывает
             </button></a>
         </div>
         <div class="col-md-6 col-sm-12 mt-2">
