--- a/apps/AI/index.html
+++ b/apps/AI/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="col-md-6 col-sm-12 mt-2">
             <div class="form-group">
-              <textarea style="resize: none; width: 100%;" name="result" class="form-input" id="result"  rows="20" readonly></textarea>
+              <textarea style="resize: none;" name="result" class="form-input" id="result"  rows="16" readonly></textarea>
             </div>
           </div>
         </div>
