--- a/apps/Computer/index.html
+++ b/apps/Computer/index.html
@@ -15,7 +15,7 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Hello, world!</title>
+    <title>Компьютер загадивает</title>
   </head>
   <body>
     <div class="container">
@@ -34,7 +34,7 @@
           </div>
           <div class="col-md-6 col-sm-12 mt-2">
             <div class="form-group">
-              <textarea style="resize: none;" name="result" class="form-control" id="result"  rows="16" readonly></textarea>
+              <textarea style="resize: none; width: 100%;" name="result" class="form-input" id="result"  rows="20" readonly></textarea>
             </div>
           </div>
         </div>
