--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta name="description" content="Это игра Быки и Коровы. Ты можешь загадать числоб а Компьютер отгадает">
+    <meta name="keywords" content="быки и коровы, быки, коровы, игра, быки и коровы играть, быки и коровы онлайн">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/css/bootstrap.min.css"
@@ -12,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
-    <title>Hello, world!</title>
+    <title>Быки и Коровы</title>
   </head>
   <body>
     <div class="container">
@@ -20,7 +21,7 @@
         <div class="col-md-6 col-sm-12 mt-2">
           <a href="./apps/Computer/index.html"
             ><button class="btn btn-lg btn-primary form-control">
-              Компьютер загадывает
+              Компьютер загадивает
             </button></a>
         </div>
         <div class="col-md-6 col-sm-12 mt-2">
