--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Это игра Быки и Коровы. Ты можешь загадать числоб а Компьютер отгадает">
+    <meta name="description" content="Это игра быки и коровы. Ты можешь загадать числоб а Компьютер отгадает">
     <meta name="keywords" content="быки и коровы, быки, коровы, игра, быки и коровы играть, быки и коровы онлайн">
     <link
       rel="stylesheet"
